apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: apache-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/local/apache2/htdocs
        # Add the following line to suppress the 'ServerName' warning
        command: ["sh", "-c", "echo 'ServerName localhost' > /usr/local/apache2/conf/httpd.conf && httpd-foreground"]
      volumes:
      - name: html
        emptyDir: {}
