apache-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-ingress-controller
  namespace: apache-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-ingress-controller
  template:
    metadata:
      labels:
        app: apache-ingress-controller
    spec:
      containers:
      - name: apache
        image: httpd:2.4  # Apache HTTP Server image
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/local/apache2/htdocs
        - name: proxy-html
          mountPath: /usr/local/apache2/proxy-html
          subPath: html
      volumes:
      - name: html
        emptyDir: {}
      - name: proxy-html
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: apache-ingress-controller
  namespace: apache-namespace
spec:
  selector:
    app: apache-ingress-controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Expose the service using NodePort for external access
