apache-service-aws1.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service-aws1
  namespace: apache-namespace
spec:
  selector:
    app: apache
    env: aws1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment-aws1
  namespace: apache-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
      env: aws1
  template:
    metadata:
      labels:
        app: apache
        env: aws1
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
