apache-service.yaml
# apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: apache-namespace
spec:
  selector:
    app: apache
    env: aws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: apache-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
      env: aws
  template:
    metadata:
      labels:
        app: apache
        env: aws
    spec:
      containers:
      - name: apache
        image: theabdullahchaudhary/my-apache-image:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: html-volume
      volumes:
      - name: html-volume
        configMap:
          name: apache-config
          items:
          - key: index.html
            path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service-aws1
  namespace: apache-namespace
spec:
  selector:
    app: apache
    env: aws1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment-aws1
  namespace: apache-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
      env: aws1
  template:
    metadata:
      labels:
        app: apache
        env: aws1
    spec:
      containers:
      - name: apache
        image: theabdullahchaudhary/my-apache-image:latest
        ports:
        - containerPort: 80
---
