apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: apache-namespace
spec:
  rules:
  - host: aws.digitxel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
  - host: aws1.digitxel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service-aws1
            port:
              number: 80
